syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "UcapCalculationResultsProto";
option java_package = "ca.aeso.capacitymarket.ucap";

import "capacitymarket/obligation_period.proto";
import "capacitymarket/ucap/ucap.proto";

package capacitymarket.ucap;

message UcapCalculationResults {

    capacitymarket.ObligationPeriod obligation_period = 1;

    enum AuctionType {
        NOT_SET = 0;
        BASE_AUCTION = 1;
        FIRST_REBALANCING_AUCTION = 2;
        SECOND_REBALANCING_AUCTION = 3;
    }
   
    AuctionType auctionType = 2;

    repeated capacitymarket.ucap.Ucap ucap = 3;
}